# kfc_support_bot

./: .dockerignore  .gitignore  Dockerfile  README.md  bot.py  docker-compose.yml  docker_deploy.sh  env_config.py  loader.py  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
config/: settings.py  urls.py  wsgi.py
handlers/users/: __init__.py  help.py  scan_chat.py  sync_all.py  sync_rest.py  sync_tr.py
keyboards/: choice_rep_sync.py  choice_tr.py
nginx/: default.conf.template
services/: check_mail.py  synchronization.py  xmlInterface.py
src/: admin.py  apps.py  exceptions.py  keyboards.py  models.py  parsers.py  utils.py  views.py
src/bot/: dialogs.py  keyboards.py  middlewares.py  scheme.py  services.py  tasks.py  utils.py  webhook.py
src/entities/: Dialog.py  FieldEngineer.py  MailClient.py  Message.py  SberEngineer.py  Scheduler.py  Service.py  SimpleOneClient.py  SupportEngineer.py  User.py
src/handlers/: common.py  sync.py
src/migrations/: 0001_initial.py  0002_auto_20230901_1607.py  0002_auto_20230918_1252.py  0003_restaurant_ident_restaurant_server_ip_and_more.py  0003_syncreport.py  0004_alter_syncreport_options_syncreport_user_choice.py  0004_remove_restaurant_ident_remove_server_ident_and_more.py  0005_alter_server_ip.py  0005_restaurant_ext_name.py  0006_alter_employee_tg_id.py  0006_server_franchise_owner.py  0007_employee_managers_workshift.py  0008_employee_tg_nickname.py  0009_task_rating.py  0010_botcommand.py  0011_remove_workshift_shift_end_break_at_and_more.py  0012_auto_20231017_1141.py  0013_alter_group_rights.py  0014_alter_employee_tg_id.py  0015_botcommandcategory_botcommand_view_priority_and_more.py  0016_auto_20231107_1341.py  0017_task_support_group_alter_task_priority.py  0018_task_closing_comment_task_doc_path_and_more.py  0019_auto_20231115_1124.py  0022_sdtask.py  (+48 more)
(+74 files in other folders)
