[tool.poetry]
name = "support-bot"
version = "0.1.0"
description = "tg bot for KFC Support"
authors = ["Stranix <Phantom2525@gmail.com>"]
readme = "README.md"
packages = [{include = "support_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.0.3"
aiogram = "^2.25.1"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
requests = "2.27.0"
django = "^4.2.4"
environs = "^9.5.0"
dj-database-url = "^2.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
